ros2_ws/log/build_2024-10-06_19-41-48/opencv_test_py/stderr.log
  File "/home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py/ref_pub.py", line 1
    from custom_interfaces.srv import FeaturesLoc.srv
                                                 ^
SyntaxError: invalid syntax

